@@ -1,3 +1,8 @@
+Sat Feb  9 14:54:33 EET 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* Allow zero length channel messages inside the Channel Message
+	  Payload.  Affected file lib/silccore/silcchannel.c.
+
 Thu Feb  7 10:12:25 CET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed CUMODE_CHANGE notify handling to change the mode of
